feat: comprehensive test suite improvements and fixes
- Fixed duplicate CreateRestaurantUseCaseTest.java with 6 comprehensive tests
- Resolved MenuItemRepositoryJpaTest.java compilation issues and exception handling
- Added complete DTO test coverage (9 test classes) with Bean Validation
- Updated comprehensive test documentation
- Fixed Maven compilation errors and test failures
- Ensured all tests follow AAA pattern with proper mocking